modal photo change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="main-photo">
         <img src="./src/img/В поле поцелуй.jpg" class="main-photo_img brc" alt="">
         <div class="main-photo_text">
-          Чтобы твои дни были только солнечными и позитивными.
+          Чтобы твои дни были только солнечными, как это небо и цвела как этот прекрасный цветочек.
         </div>
       </div>
       <div class="main-photo">
